force-app/main/default/objects/copado__Test_Script_Step__c/fields/copado__Action_Description__c.field-meta.xml
<CustomField>
    <fullName>copado__Action_Description__c</fullName>
    <label>Action/Description</label>
    <type>TextArea</type>
</CustomField>