force-app/main/default/objects/copado__Test_Script_Step__c/fields/copado__Guidance_notes__c.field-meta.xml
<CustomField>
    <fullName>copado__Guidance_notes__c</fullName>
    <label>Guidance notes</label>
    <type>TextArea</type>
</CustomField>