force-app/main/default/objects/copado__Test_Script_Step__c/fields/copado__Order__c.field-meta.xml
<CustomField>
    <fullName>copado__Order__c</fullName>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>