force-app/main/default/objects/copado__Test_Script_Step__c/fields/copado__Step_Title__c.field-meta.xml
<CustomField>
    <fullName>copado__Step_Title__c</fullName>
    <label>Step Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>