force-app/main/default/objects/copado__Test_Script_Step__c/fields/copado__Test_Script__c.field-meta.xml
<CustomField>
    <fullName>copado__Test_Script__c</fullName>
    <label>Test Script</label>
    <referenceTo>copado__Test_Script__c</referenceTo>
    <relationshipName>Script_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>